--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="Banner">
-        <h1>Logo</h1>
+        <h1>Gossip Girl</h1>
         <ul class="Lista">
             <li>contato</li>
             <li>fotos</li>
@@ -18,15 +18,18 @@
     <div class="Tudo">
         <div class="Menu">
             <ul class="Lista1">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Serena Van Der Woodsen </li>
+                <li>Blair Waldorf</li>
+                <li>Chuck Bass</li>
+                <li>Nate Archibald</li>
+                <li>More</li>
             </ul>
         </div>
         <div class="Principal">
-            <h2>Seja bem vindo!</h2>
+            <h2>Hey Upper East Siders!</h2>
+            <h3>Gossip Girl here ! Your one and only source into the scandalous lives of Manhattan's elite.</h3>
+            <h4>XOXO, GOSSIP GIRL </h4>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT90JJjvQd_x8jfGq-9bNC_iXYK1IwzCGQQAPKC7B-UyUKcbxkwIj0ZwgmyepjLkAbSNDE&usqp=CAU">
         </div>
     </div>
 </body>
