--- a/indexII.html
+++ b/indexII.html
@@ -6,11 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="styleII.css">
 </head>
+
 <body>
+
    <div class="body">
-    EDUCATIONv
+    EDUCATION
    </div>
-    
+
+   
+   <div class="img">
+    <img src="chapeu-removebg-preview.png" alt="">
+   </div>
+
    
 </body>
 </html>
