--- a/indexII.html
+++ b/indexII.html
@@ -9,15 +9,17 @@
 
 <body>
 
-   <div class="body">
-    EDUCATION
+   <div >
+    <h1>EDUCATION</h1>
+    <img src="chapeu-removebg-preview.png"  class="img" alt="">
+    <p>Lorem ipsum dolo sit amet</p>
+    <input type="button" value="LOREM">
    </div>
 
    
-   <div class="img">
-    <img src="chapeu-removebg-preview.png" alt="">
-   </div>
-
+    
+   
+   
    
 </body>
 </html>
