--- a/indexII.html
+++ b/indexII.html
@@ -11,9 +11,14 @@
 
    <div >
     <h1>EDUCATION</h1>
+    <center>
     <img src="chapeu-removebg-preview.png"  class="img" alt="">
     <p>Lorem ipsum dolo sit amet</p>
     <input type="button" value="LOREM">
+    <p></p>
+    <p2>Lorem ipsum dolor sit amet, consecteur adipscing eli, sed diam nnummy nibh euismod.</p2>
+    <h2>...</h2>
+    </center>
    </div>
 
    
