--- a/indexf.html
+++ b/indexf.html
@@ -14,9 +14,15 @@
         <button>Link</button>
     </div>
     <div class="tudo">
-        <div class="div1">1</div>
+        <div class="div1">
+            1
+        </div>
+        
+
+      <div class="divs">
         <div class="div2">2</div>
         <div class="div3">3</div>
+      </div>
     </div>
 </body>
 </html>
