--- a/indexf.html
+++ b/indexf.html
@@ -14,9 +14,7 @@
         <button>Link</button>
     </div>
     <div class="tudo">
-        <div class="div1">
-            1
-        </div>
+        <div class="div1"> 1 </div>
         
 
       <div class="divs">
