--- a/indexf.html
+++ b/indexf.html
@@ -22,5 +22,6 @@
         <div class="div3">3</div>
       </div>
     </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem obcaecati modi quisquam animi cupiditate delectus provident quo adipisci voluptates. Dolore cumque aliquam magni distinctio voluptates assumenda illo debitis adipisci at?</p>
 </body>
 </html>
