--- a/indexf.html
+++ b/indexf.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="stylef.css">
 </head>
 <body>
+  
     <div class="logo">
-        <h1>LOGO</h1>
+        <img src="Pih.png" alt="">
         <button>Link</button>
         <button>Link</button>
         <button>Link</button>
@@ -22,6 +23,7 @@
         <div class="div3">3</div>
       </div>
     </div>
+  
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem obcaecati modi quisquam animi cupiditate delectus provident quo adipisci voluptates. Dolore cumque aliquam magni distinctio voluptates assumenda illo debitis adipisci at?</p>
 </body>
 </html>
