--- a/indexf.html
+++ b/indexf.html
@@ -27,3 +27,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem obcaecati modi quisquam animi cupiditate delectus provident quo adipisci voluptates. Dolore cumque aliquam magni distinctio voluptates assumenda illo debitis adipisci at?</p>
 </body>
 </html>
+
+<!--celular:316x451
+tablet:560x583
+computador:1054x483-->
