--- a/indexG.html
+++ b/indexG.html
@@ -10,17 +10,24 @@
 <body>
     <div class="Menu">
         <h1>Your Logo</h1>
+        <center>
         <ul>
             <li>Home</li>
             <li>About Us</li>
             <li>Services</li>
             <li>Contact Us</li>
         </ul>
+    </center>
     </div>
     <div class="texto">
         <h3>LET'S START THE ADVENTURE</h3>
         <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis quisquam molestiae impedit dolores nesciunt tempora pariatur nihil suscipit repudiandae ab quo quod, aperiam ad odit hic expedita fuga asperiores magni. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse provident quod, veritatis tempora voluptates iure recusandae distinctio modi tempore ipsam nisi qui magnam autem velit consequatur molestiae quam deleniti fugiat!</h2>
     </div>
+    <div class="botao">
+        <input class="b1" type="button" value="GET STARTED">
+        <input class="b2" type="button" value="READ MORE">
+    </div>
+    
    
     
 </body>
