--- a/indexG.html
+++ b/indexG.html
@@ -27,7 +27,11 @@
         <input class="b1" type="button" value="GET STARTED">
         <input class="b2" type="button" value="READ MORE">
     </div>
-    
+    <div class="fundo">
+        <img class="f" src="instagram.png" alt="">
+        <img class="f" src="facebook.png" alt="">
+        <img class="t" src="twitter.png" alt="">
+    </div>
    
     
 </body>
